--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "gulp": "^3.9.1",
+    "redis": "^2.8.0",
     "socket.io": "^2.0.3"
   },
   "babel": {
