--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
