--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "async": "^2.5.0",
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "chai": "^4.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "gulp": "^3.9.1",
+    "mocha": "^3.5.0",
     "redis": "^2.8.0",
     "socket.io": "^2.0.3"
   },
