--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "scripts": {
     "start": "node app.js",
     "compile": "gulp",
-    "watch": "gulp watch"
+    "watch": "gulp watch",
+    "test": "mocha \"test/**/*.js\""
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
