--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "async": "^2.5.0",
     "axios": "^0.16.2",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
-    "chai": "^4.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "gulp": "^3.9.1",
-    "mocha": "^3.5.0",
     "redis": "^2.8.0",
     "socket.io": "^2.0.3"
   },
@@ -37,8 +36,10 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "mocha": "^3.5.0"
   }
 }
