--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "start": "node app.js",
     "compile": "gulp",
     "watch": "gulp watch",
-    "test": "mocha \"test/**/*.js\""
+    "test": "mocha \"test/**/*.js\"",
+    "precommit": "npm test",
+    "prepush": "npm test"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -40,6 +42,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
+    "husky": "^0.14.3",
     "mocha": "^3.5.0"
   }
 }
