--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "husky": "^0.14.3",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "supertest": "^3.0.0"
   }
 }
