--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "watch": "gulp watch",
     "test": "mocha \"test/**/*.js\"",
     "precommit": "npm test",
-    "prepush": "npm test"
+    "prepush": "npm test",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.1",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb-base": "^12.0.1",
+    "eslint-plugin-import": "^2.7.0",
     "gulp-babel": "^6.1.2",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
